[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "import-derive",
    "import","s3", "db",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1"
bs58 = { version = "0", features = ["check"] }
bytes = "1"
chrono = "0"
clap = { version = "4", features = ["derive"] }
duckdb = { version = "1", features = ["bundled", "chrono", "json", "serde_json"] }
futures = "0"
helium-proto = { git = "https://github.com/helium/proto", branch = "master", features = [
  "services",
] }
prost = "0.12"
rust_decimal = "1"
serde_json = "1"
tokio = { version = "1", default-features = false, features = [
  "fs",
  "macros",
  "signal",
  "sync",
  "rt-multi-thread",
  "rt",
  "process",
  "time",
] }
uuid = { version = "1", features = ["v4"] }
