[package]
name = "huckli-import"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bs58.workspace = true
chrono.workspace = true
clap.workspace = true
huckli-db = { path = "../huckli-db" }
duckdb.workspace = true
futures.workspace = true
helium-proto.workspace = true
huckli-import-derive = { path = "../huckli-import-derive" }
prost.workspace = true
rust_decimal.workspace = true
huckli-s3 = { path = "../huckli-s3" }
tokio.workspace = true
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
uuid.workspace = true
serde_json.workspace = true
