[package]
name = "import"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bs58.workspace = true
chrono.workspace = true
clap.workspace = true
db = { path = "../db" }
duckdb.workspace = true
futures.workspace = true
helium-proto.workspace = true
import-derive = { path = "../import-derive" }
prost.workspace = true
rust_decimal.workspace = true
s3 = { path = "../s3" }
tokio.workspace = true
uuid.workspace = true
