[package]
name = "import"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bs58.workspace = true
chrono.workspace = true
clap.workspace = true
db = { path = "../db" }
duckdb.workspace = true
futures.workspace = true
helium-proto.workspace = true
import-derive = { path = "../import-derive" }
prost.workspace = true
rust_decimal.workspace = true
s3 = { path = "../s3" }
serde_json.workspace = true
tokio.workspace = true
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
uuid.workspace = true
