[package]
name = "s3"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-compression = {version = "0", features = ["tokio", "gzip"]}
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
lazy_static = "1"
regex = "1"
tokio.workspace = true
tokio-util = "0"
